--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>emi lamby's portal</title>
     <link href="styles.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="fonts.googleapis.com/css?family=VT323" />
+    <link rel="stylesheet" type="text/css" href="VT323-Regular.ttf" />
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
 <script src="sketch.js"></script>
