--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section>
     <h2> project </h2>
     <ul>
-      <li> <a href=""> topic brainstorm </a></li>
+      <li> <a href="topicbrainstorm.html"> topic brainstorm </a></li>
     </ul>
   </section>
   <footer>
