--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <h2> project </h2>
     <ul>
       <li> <a href="topicbrainstorm.html"> topic brainstorm </a></li>
+      <li> <a href="comparative.html"> comparative research </a></li>
     </ul>
   </section>
   <footer>
