--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <section>
     <h2> studios </h2>
     <ol>
-      <li> <a href="">studio 0</a> </li>
+      <li> <a href="/madlibs/index.html">studio 1</a> </li>
     </ol>
   </section>
   <section>
