--- a/madlibs/index.html
+++ b/madlibs/index.html
@@ -44,7 +44,7 @@
       </div>
 
       <div>
-        <label>favorite drink</label>
+        <label>fav drink</label>
         <input type="text" name="favDrink">
       </div>
 
