--- a/madlibs/index.html
+++ b/madlibs/index.html
@@ -17,7 +17,7 @@
   <div id="wrapper">
 
       <p id="myMsg" class="hide">yeeee</p>
-      <img id="pic" class="hide" src="http://78.media.tumblr.com/tumblr_m9srsi2dB71roozkr.gif"/>
+      <img id="pic" class="hide" src="https://78.media.tumblr.com/9ef26e21f8f9c4d58bbf539ad63fc37f/tumblr_p3cdru4Vfs1wgcsb4o1_1280.gif"/>
 
   <article>
     <form name="f">
@@ -65,7 +65,9 @@
       </div>
 
     </form>
+
   </article>
+    <img id="bun" class="show" src="https://78.media.tumblr.com/99f1d517b92eedd44c1bbc5b9f036119/tumblr_p3ce8c2iQo1wgcsb4o1_500.png"/>
 
 </body>
 
