--- a/madlibs/index.html
+++ b/madlibs/index.html
@@ -17,12 +17,12 @@
   <div id="wrapper">
 
       <p id="myMsg" class="hide">yeeee</p>
-      <img id="pic" class="hide" src="https://78.media.tumblr.com/9ef26e21f8f9c4d58bbf539ad63fc37f/tumblr_p3cdru4Vfs1wgcsb4o1_1280.gif"/>
+      <img id="pic" class="hide" alt="space bunny" src="https://78.media.tumblr.com/9ef26e21f8f9c4d58bbf539ad63fc37f/tumblr_p3cdru4Vfs1wgcsb4o1_1280.gif"/>
 
   <article>
     <form name="f">
       <fieldset>
-          <legend>>> can you help us? please provide the following info! </legend>
+          <legend><h2>>> can you help us? please provide the following info! </h2></legend>
       <div>
         <label>number</label>
         <input type="text" name="number">
@@ -64,11 +64,14 @@
       	<input type="reset" value="reset" />
       </div>
 
+</fieldset>
     </form>
 
   </article>
-    <img id="bun" class="show" src="https://78.media.tumblr.com/99f1d517b92eedd44c1bbc5b9f036119/tumblr_p3ce8c2iQo1wgcsb4o1_500.png"/>
-
+  </div>
+    <img id="bun" alt="space bunny" class="show" src="https://78.media.tumblr.com/99f1d517b92eedd44c1bbc5b9f036119/tumblr_p3ce8c2iQo1wgcsb4o1_500.png"/>
+    <footer><a href="https://validator.w3.org/check?uri=referer"> valid HTML 5 </a> <b>✧</b>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer"> valid CSS </a></footer>
 </body>
 
 </html>
