--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <h2> project </h2>
     <ul>
       <li> <a href="topicbrainstorm.html"> topic brainstorm </a></li>
-      <li> <a href="comparative.html"> comparative research </a></li>
+      <li> <a href="comparative.html"> comparative  </a></li>
+      <li> <a href="research.html"> background research </a></li>
     </ul>
   </section>
   <footer>
