--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h2> studios </h2>
     <ol>
       <li> <a href="/des157/madlibs/index.html">studio 1</a> </li>
+        <li> <a href="/des157/pocket/index.html">studio 2</a> </li>
     </ol>
   </section>
   <section>
