--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li> <a href="topicbrainstorm.html"> topic brainstorm </a></li>
       <li> <a href="comparative.html"> comparative  </a></li>
       <li> <a href="research.html"> background research </a></li>
+      <li> <a href="audience.html"> audience research </a></li>
     </ul>
   </section>
   <footer>
