--- a/audience.html
+++ b/audience.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>background research</title>
+  <title>audience research</title>
   <link href="styles.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="VT323.ttf" />
 </head>
