--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li> <a href="comparative.html"> comparative  </a></li>
       <li> <a href="research.html"> background research </a></li>
       <li> <a href="audience.html"> audience research </a></li>
+      <li> <a href="storyboards.html"> storyboards </a></li>
     </ul>
   </section>
   <footer>
