--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <ol>
       <li> <a href="/des157/madlibs/index.html">studio 1</a> </li>
         <li> <a href="/des157/pocket/index.html">studio 2</a> </li>
+          <li> <a href="/des157/galaxy/index.html">studio 3</a> </li>
     </ol>
   </section>
   <section>
