--- a/galaxy/index.html
+++ b/galaxy/index.html
@@ -13,7 +13,7 @@
   <!-- particles.js container -->
   <div id="particles-js">
   </div>
-  
+
   <p id="msg1">take me home!!</p>
 
   <div id="container">
@@ -28,5 +28,6 @@
   <!-- konva library -->
   <script src="https://cdn.rawgit.com/konvajs/konva/1.7.6/konva.min.js"></script>
   <script src="index.js"></script>
+    <script src="particles.js"></script>
 </body>
 </html>
