--- a/galaxy/index.html
+++ b/galaxy/index.html
@@ -19,15 +19,17 @@
   <div id="container">
     <img id="bun" alt="bunny ufo" src="https://78.media.tumblr.com/63c3ffe2801d06d2803c29532f3104f0/tumblr_p47pinDWKm1wgcsb4o1_400.gif" />
   </div>
-
+  <footer><a href="https://validator.w3.org/check?uri=referer"> valid HTML 5 </a> <b>✧</b>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer"> valid CSS </a></footer>
   <!-- planet message -->
   <img width="500" alt="instructions" id="planet" src="https://78.media.tumblr.com/210b4867cf5413af3b5556b391c109fd/tumblr_p4ja415DSx1wgcsb4o1_1280.png" />
-
   <!-- particles.js library-->
   <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <!-- konva library -->
   <script src="https://cdn.rawgit.com/konvajs/konva/1.7.6/konva.min.js"></script>
   <script src="index.js"></script>
     <script src="particles.js"></script>
+
+
 </body>
 </html>
