--- a/galaxy/index.html
+++ b/galaxy/index.html
@@ -27,7 +27,7 @@
 
 </body>
 <!-- particles.js library-->
-<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="particles.min.js"></script>
 <!-- konva library -->
 <script src="https://cdn.rawgit.com/konvajs/konva/1.7.6/konva.min.js"></script>
