--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li> <a href="research.html"> background research </a></li>
       <li> <a href="audience.html"> audience research </a></li>
       <li> <a href="storyboards.html"> storyboards </a></li>
+      <li> <a href="visual.html"> visual research </a></li>
     </ul>
   </section>
   <footer>
