--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <li> <a href="audience.html"> audience research </a></li>
       <li> <a href="storyboards.html"> storyboards </a></li>
       <li> <a href="visual.html"> visual research </a></li>
+      <li> <a href="brief.html"> project brief </a></li>
     </ul>
   </section>
   <footer>
