--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <li> <a href="storyboards.html"> storyboards </a></li>
       <li> <a href="visual.html"> visual research </a></li>
       <li> <a href="brief.html"> project brief </a></li>
+      <li> <a href="paper-prototype.html"> paper prototypes </a></li>
     </ul>
   </section>
   <footer>
