--- a/paper-prototype.html
+++ b/paper-prototype.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>visual moodboards</title>
+  <title>paper prototypes</title>
   <link href="styles.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="VT323.ttf" />
 </head>
