--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <li> <a href="visual.html"> visual research </a></li>
       <li> <a href="brief.html"> project brief </a></li>
       <li> <a href="paper-prototype.html"> paper prototypes </a></li>
+      <li> <a href="siteflow.html"> site flow </a></li>
+      <li> <a href="userflow.html"> user flow </a></li>
+      <li> <a href="wireframe.html"> wireframe </a></li>
     </ul>
   </section>
   <footer>
