--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <li> <a href="siteflow.html"> site flow </a></li>
       <li> <a href="userflow.html"> user flow </a></li>
       <li> <a href="wireframe.html"> wireframe </a></li>
+      <li> <a href="interactive.html"> interactive wireframe </a></li>
     </ul>
   </section>
   <footer>
