--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <li> <a href="userflow.html"> user flow </a></li>
       <li> <a href="wireframe.html"> wireframe </a></li>
       <li> <a href="interactive.html"> interactive wireframe </a></li>
+      <li> <a href="comps.html"> comps</a></li>
     </ul>
   </section>
   <footer>
