--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <li> <a href="wireframe.html"> wireframe </a></li>
       <li> <a href="interactive.html"> interactive wireframe </a></li>
       <li> <a href="comps.html"> comps</a></li>
+        <li> <a href="/interactive/index.html"> prototype 1</a></li>
     </ul>
   </section>
   <footer>
