--- a/interactive/index.html
+++ b/interactive/index.html
@@ -11,41 +11,73 @@
 <body>
 
   <!-- particles.js container -->
-
-
   <div id="particles-js">
   </div>
-  <div id="planets">
+  <div id="galaxy1">
   </div>
   <h1 id="label"> welcome </h1>
 
-  <p id="p1"> have you ever wanted to visualize your place in your communities?<br>
-    galaxsee is a project that represents communities as interactive galaxies.<br>
-    press start to customize yourself, or choose to view existing communities. </p>
+  <p id="p1"> have you ever wanted to visualize your place in your communities?<br> galaxsee is a project that represents communities as interactive galaxies.<br> press start to customize yourself, or choose to view existing communities. </p>
 
   <p id="p2"> choose any and all communities that apply to you!</p>
-  <p id="p2b"> you have chosen: <br><br> is this correct?</p>
+  <p id="p2b"> you have chosen: <br></p>
+  <p id="results"> </p>
 
   <form id="community" action="/action_page.php" method="get">
-    <input type="checkbox" value="design"> design major<br>
-    <input type="checkbox" value="third"> 3rd year<br>
-    <input type="checkbox" value="student"> uc davis student<br>
-    <input type="checkbox" checked="checked" value="davis"> city of davis resident<br>
+    <input id="design" type="checkbox" value="design"> design major<br>
+    <input id="junior"type="checkbox" value="third"> 3rd year<br>
+    <input id="student" type="checkbox" value="student"> uc davis student<br>
+    <input id="davis" type="checkbox" checked="checked" value="davis"> city of davis resident<br>
   </form>
 
   <section id="choose">
-  now viewing <select>
+    now viewing <select>
     <option>uc davis students</option>
     <option>design majors</option>
     <option>3rd year students</option>
     <option>city of davis</option>
   </select></section><br>
 
+
+
+  <form id="identity"  method="get">
+    <input id="planet" type="radio" name="avatar"> planet<br></input>
+    <input id="star"  type="radio" name="avatar"> star<br></input>
+</form>
+    <a id="confirm">confirm</a>
+<a id="yes">yes</a>
+<a id="no">no </a>
+
+<section id="custom">
+  <div id="preview">
+  </div>
+  fav color <select id="color">
+    <option value="blue">blue</option>
+    <option value="pink">pink</option>
+    <option value="yellow">yellow</option>
+  </select><br>
+  pattern <select>
+    <option value="dots">dots</option>
+    <option value="stripe">stripe</option>
+    <option value="fade">fade</option>
+  </select> <br>
+  rings <select>
+    <option>yes</option>
+    <option>no</option>
+  </select><br>
+  size <select>
+    <option>s</option>
+    <option>m</option>
+    <option>l</option>
+  </select>
+</section>
+
+
   <nav>
     <input id="submit" type="submit" value="submit" />
     <a id="start">start</a>
-    
-     <a id="view">view galaxies </a>
+
+    <a id="view">view galaxies </a>
 
   </nav>
 
