--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <li> <a href="interactive.html"> interactive wireframe </a></li>
       <li> <a href="comps.html"> comps</a></li>
         <li> <a href="des157/interactive/index.html"> prototype 1</a></li>
+          <li> <a href="audience-test.html"> audience test</a></li>
     </ul>
   </section>
   <footer>
