--- a/audience-test.html
+++ b/audience-test.html
@@ -21,7 +21,7 @@
 
         <li>view community galaxies</li>
 
-        <li>view event resources</li>
+        <li>identify an event that interests you</li>
 
     </ol>
 
