--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
       <li> <a href="wireframe.html"> wireframe </a></li>
       <li> <a href="interactive.html"> interactive wireframe </a></li>
       <li> <a href="comps.html"> comps</a></li>
-        <li> <a href="des157/interactive/index.html"> prototype 1</a></li>
+        <li> <a href="/des157/proto-1/index.html"> prototype 1</a></li>
           <li> <a href="audience-test.html"> audience test</a></li>
+          <li> <a href="/des157/interactive/index.html"> prototype 2</a></li>
     </ul>
   </section>
   <footer>
