--- a/audience-test.html
+++ b/audience-test.html
@@ -19,7 +19,7 @@
     <ol>
       <li> customization process (choose community, etc)</li>
 
-        <li>view community galaxies</li>
+        <li>view final planet and community galaxies</li>
 
         <li>identify an event that interests you</li>
 
