--- a/interactive/index.html
+++ b/interactive/index.html
@@ -105,6 +105,12 @@
   that often go unnoticed. <br><br>
   below, you can find a categorized list of events in this community. </p>
 <a class="calendar" id="calendar" href="https://www.ucdavis.edu/calendar/all-events/">event calendar</a>
+</div>
+<img id="pl1" src="planets/orange-plain.png"/>
+<img id="pl2" src="planets/purple-plain.png"/>
+<img id="pl3" src="planets/green-plain.png"/>
+<img id="pl4" src="planets/pink-plain.png"/>
+<img id="pl5" src="planets/blue-plain.png"/>
 
 
 
