--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
       <li> <a href="wireframe.html"> wireframe </a></li>
       <li> <a href="interactive.html"> interactive wireframe </a></li>
       <li> <a href="comps.html"> comps</a></li>
-        <li> <a href="/des157/proto-1/index.html"> prototype 1</a></li>
+        <li> <a href="/des157/proto1/index.html"> prototype 1</a></li>
           <li> <a href="audience-test.html"> audience test</a></li>
-          <li> <a href="/des157/interactive/index.html"> prototype 2</a></li>
+          <li> <a href="/des157/proto2/index.html"> prototype 2</a></li>
+
+          <li> <a href="audience-results.html"> audience results</a></li>
     </ul>
   </section>
   <footer>
