--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
           <li> <a href="/des157/proto2/index.html"> prototype 2</a></li>
 
           <li> <a href="audience-results.html"> audience results</a></li>
+            <li> <a href="/des157/final/index.html"> final</a></li>
+            <li> <a href="presentation.pdf"> presentation</a></li>
     </ul>
   </section>
   <footer>
