--- a/final/index.html
+++ b/final/index.html
@@ -104,7 +104,7 @@
     art installations, exhibits, and workshops throughout the year
   that often go unnoticed. <br><br>
   below, you can find a categorized list of events in this community. </p>
-<a class="calendar" id="calendar" href="https://www.ucdavis.edu/calendar/all-events/">event calendar</a>
+<a class="calendar" id="calendar" target="_blank" href="https://www.ucdavis.edu/calendar/all-events/">event calendar</a>
 <!-- </div>
 <div id="hidden">
 <img id="pl1" src="planets/orange-plain.png"/>
