--- a/final/index.html
+++ b/final/index.html
@@ -16,7 +16,6 @@
   <div id="galaxy1">
   </div>
 
-
   <h1 id="label"> welcome </h1>
 
 <!-- messages -->
@@ -42,9 +41,7 @@
   <a id="yes">yes</a>
   <a id="no">no </a>
 
-
-<!-- AVATAR CREATION FORMS-->
-<!-- PLANETS -->
+<!-- PLANET CREATION FORMS-->
     <section id="custom">
           <div id="preview">
           <img src="planets/blue-plain.png"  id="colorImg">
@@ -81,8 +78,6 @@
         <a class="confirm" id="avsubmit">yes</a>
         <a class="confirm" id="avback">no</a>
 
-<!-- STARS (TO BE ADDED) -->
-
   <nav>
     <input  class="confirm" id="submit" type="submit" value="submit" />
     <a id="start">start</a>
@@ -105,20 +100,10 @@
   that often go unnoticed. <br><br>
   below, you can find a categorized list of events in this community. </p>
 <a class="calendar" id="calendar" target="_blank" href="https://www.ucdavis.edu/calendar/all-events/">event calendar</a>
-<!-- </div>
-<div id="hidden">
-<img id="pl1" src="planets/orange-plain.png"/>
-<img id="pl2" src="planets/purple-plain.png"/>
-<img id="pl3" src="planets/green-plain.png"/>
-<img id="pl4" src="planets/pink-plain.png"/>
-</div> -->
-
 
 </body>
 <!-- particles.js library-->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<!-- p5 library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
 <script src="index.js"></script>
 
 </html>
